tests/compilation_error/optional_parameter_invalid_default.ll
def fail(int x="not an int"):
    print x
